@@ -1,3 +1,24 @@
+/*
+ * #%L
+ * How to Modify a String Without Creating a New One
+ * $Id:$
+ * $HeadURL:$
+ * %%
+ * Copyright (C) 2012 - 2015 Java Creed
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * 
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ * 
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * #L%
+ */
 package com.javacreed.examples.lang;
 
 import java.lang.reflect.Field;
@@ -6,7 +27,6 @@ import java.util.Arrays;
 
 public class Example3 {
   public static void main(final String[] args) throws Exception {
-    // java -Djava.security.manager
     System.setSecurityManager(new SecurityManager() {
       @Override
       public void checkPermission(final Permission perm) {
@@ -24,13 +44,13 @@ public class Example3 {
           // Ignore/Allow
           break;
         default:
+            System.out.println(perm.getName());
           super.checkPermission(perm);
         }
       }
     });
 
     final Class<String> type = String.class;
-    // The following line fails with an AccessControlException exception
     final Field valueField = type.getDeclaredField("value");
     valueField.setAccessible(true);
 
